feat: adapt the position of the menu
Adapt the position of the menu depending on the position of the anchor
and the size of the menu

--- a/frontend/src/components/Menu/Menu.module.css
+++ b/frontend/src/components/Menu/Menu.module.css
@@ -1,7 +1,10 @@
 @layer components {
     .menu {
+        --item-height: var(--size-12);
+
         min-width: var(--size-18);
         max-width: var(--size-19);
+        max-height: calc(100svh - var(--item-height));
         padding-block: var(--padding-2);
         padding-inline: 0;
         margin: 0;
@@ -22,10 +25,13 @@
         background-color: rgb(var(--color-surface-container));
 
         box-shadow: var(--elevation-2);
+
+        overflow: auto;
     }
 
     .menuItem {
-        height: var(--size-12);
+        height: var(--item-height);
+        flex-shrink: 0;
     }
 
     .button {
