feat: add action to delete a post

--- a/frontend/src/components/Dialog/Dialog.module.css
+++ b/frontend/src/components/Dialog/Dialog.module.css
@@ -50,6 +50,8 @@
     }
 
     .content {
+        composes: body-large from '../../assets/styles/patterns/typography.module.css';
+
         overflow: auto;
         padding-inline: var(--padding-6);
         padding-block-start: var(--padding-4);
