--- a/frontend/src/pages/UI/UI.module.css
+++ b/frontend/src/pages/UI/UI.module.css
@@ -27,6 +27,7 @@
     .main {
         grid-area: main;
         overflow: auto;
+        background-color: rgb(var(--color-surface));
     }
 
     @media bp-medium {
