fix: fix styling issues
UpsertPostDialog title was not changing when updating.

Dialog content text color still dark when using dark mode.

--- a/frontend/src/components/Dialog/Dialog.module.css
+++ b/frontend/src/components/Dialog/Dialog.module.css
@@ -56,5 +56,6 @@
         padding-inline: var(--padding-6);
         padding-block-start: var(--padding-4);
         margin-block-end: var(--padding-6);
+        color: rgb(var(--color-on-surface-variant));
     }
 }
