--- a/frontend/src/layouts/UserHeader/UserHeader.module.css
+++ b/frontend/src/layouts/UserHeader/UserHeader.module.css
@@ -2,12 +2,7 @@
 
 @layer components {
     .header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-
-        background-color: rgb(var(--color-surface));
+        background-color: rgb(var(--color-surface-container-low));
 
         min-height: var(--size-18);
         padding-inline-start: var(--padding-1);
@@ -18,20 +13,10 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-content: space-between;
         align-items: center;
-
-        z-index: var(--layer-4);
-
-        transition: background-color var(--motion-duration-12)
-            var(--motion-easing-emphasized);
-    }
-
-    .scrolledHeader {
-        composes: header;
-
-        background-color: rgb(var(--color-surface-container));
+        column-gap: var(--padding-2);
     }
 
     .navigation {
@@ -46,39 +31,32 @@
 
     .heading {
         composes: headline-small from '../../assets/styles/patterns/typography.module.css';
+        color: rgb(var(--color-on-surface));
     }
 
-    .subheading {
-        composes: title-medium from '../../assets/styles/patterns/typography.module.css';
+    .subHeading {
+        composes: title-small from '../../assets/styles/patterns/typography.module.css';
+        color: rgb(var(--color-on-surface-variant));
     }
 
-    @media bp-medium {
-        .header {
-            padding-inline-start: var(--padding-4);
-            padding-inline-end: var(--padding-4);
-        }
+    .smallHeader {
+        composes: header;
+
+        flex-wrap: nowrap;
+
+        min-height: var(--size-14);
+        padding-block-start: 0;
+        padding-block-end: 0;
+        align-items: center;
     }
 
-    @media bp-expanded {
-        .header {
-            flex-wrap: nowrap;
+    .smallHeader .headingGroup {
+        order: 0;
+        flex-basis: auto;
+        flex-grow: 1;
+    }
 
-            min-height: var(--size-14);
-            padding-block-start: 0;
-            padding-block-end: 0;
-            align-items: center;
-
-            padding-inline-start: var(--padding-8);
-        }
-
-        .headingGroup {
-            order: 0;
-            flex-basis: auto;
-            flex-grow: 1;
-        }
-
-        .navigation {
-            display: none;
-        }
+    .smallHeader .navigation {
+        flex-grow: 0;
     }
 }
