--- a/frontend/src/assets/styles/variables/breakpoints.module.css
+++ b/frontend/src/assets/styles/variables/breakpoints.module.css
@@ -2,3 +2,4 @@
 @value medium: (min-width: 601px);
 @value expanded: (min-width: 841px);
 @value extra-large: (min-width: 1024px);
+@value xxl: (min-width: 1200px);
