--- a/frontend/src/assets/styles/variables/size.module.css
+++ b/frontend/src/assets/styles/variables/size.module.css
@@ -51,6 +51,7 @@
     --size-34: 34rem;
     --size-35: 35rem;
     --size-36: 36rem;
+    --size-60: 60rem;
     --size-68: 68rem;
 
     --size-target: var(--size-12);
