--- a/frontend/src/pages/Network/Network.module.css
+++ b/frontend/src/pages/Network/Network.module.css
@@ -1,13 +1,12 @@
-@value extra-large as bp-extra-large, expanded as bp-expanded, medium as bp-medium from "../../assets/styles/variables/breakpoints.module.css";
+@value xxl as bp-xxl, extra-large as bp-extra-large, expanded as bp-expanded, medium as bp-medium from "../../assets/styles/variables/breakpoints.module.css";
 
 @layer components {
     .network {
-        padding: var(--padding-4);
     }
 
     .heading {
         composes: headline-large from '../../assets/styles/patterns/typography.module.css';
-        margin-block-end: var(--padding-4);
+        padding: var(--padding-4);
         color: rgb(var(--color-on-surface));
     }
 
@@ -26,16 +25,17 @@
         .network {
             padding-block: var(--padding-8);
             padding-inline: var(--padding-12);
+            background-color: rgb(var(--color-surface-container-low));
         }
 
         .heading {
+            padding: 0;
             margin-block-end: var(--padding-8);
         }
 
         .users,
         .heading,
         .error {
-            max-width: var(--size-34);
             margin-inline: auto;
         }
     }
@@ -53,12 +53,14 @@
         }
     }
 
-    @media bp-extra-large {
+    @media bp-xxl {
         .network {
+            overflow: hidden;
             padding-inline: var(--padding-12);
+
             display: grid;
-            grid-template-columns: 1fr 3fr;
-            grid-template-rows: 1fr 1fr;
+            grid-template-columns: fit-content(40%) 1fr;
+            grid-template-rows: auto 1fr;
             grid-template-areas:
                 'heading user'
                 'users user';
@@ -70,19 +72,41 @@
             margin: 0;
         }
 
+        .users {
+            background-color: rgb(var(--color-surface));
+            border-radius: var(--border-radius-2);
+            overflow: auto;
+        }
+
         .error,
         .users {
             grid-area: users;
         }
 
-        .user {
+        .userPlaceholder {
+            composes: body-large from '../../assets/styles/patterns/typography.module.css';
+
+            background-color: rgb(var(--color-surface));
+            color: rgb(var(--color-on-surface));
+            text-align: center;
+
+            display: grid;
+            place-content: center;
+
+            padding-inline: calc(50% - var(--size-text-small));
+        }
+
+        .user,
+        .userPlaceholder {
             grid-area: user;
+            border-radius: var(--border-radius-4);
         }
 
         .users,
         .heading,
         .error {
             max-width: var(--size-68);
+            min-width: var(--size-19);
         }
     }
 }
