--- a/frontend/src/pages/User/User.module.css
+++ b/frontend/src/pages/User/User.module.css
@@ -26,9 +26,44 @@
         margin-inline: auto;
     }
 
+    .loadingUser {
+        background-color: rgb(var(--color-surface-container-low));
+        height: var(--size-18);
+
+        display: grid;
+        place-content: center;
+
+        flex-shrink: 0;
+    }
+
+    .errorUser {
+        composes: body-large from '../../assets/styles/patterns/typography.module.css';
+
+        color: rgb(var(--color-on-surface));
+        background-color: rgb(var(--color-surface-container-low));
+
+        padding: var(--padding-4);
+        min-height: var(--size-18);
+
+        display: grid;
+        place-content: center;
+
+        flex-shrink: 0;
+    }
+
     @media bp-medium {
         .userHeader {
             background-color: rgb(var(--color-surface));
+        }
+
+        .loadingUser {
+            background-color: rgb(var(--color-surface));
+        }
+
+        .errorUser {
+            background-color: rgb(var(--color-surface));
+            color: rgb(var(--color-on-surface));
+            padding-inline: var(--padding-12);
         }
 
         .content {
@@ -47,6 +82,10 @@
         .content {
             padding-inline: var(--padding-4);
             padding-block: var(--padding-6);
+        }
+
+        .errorUser {
+            padding-inline: var(--padding-4);
         }
 
         .posts {
