--- a/frontend/src/features/users/UsersList/UsersList.module.css
+++ b/frontend/src/features/users/UsersList/UsersList.module.css
@@ -5,6 +5,7 @@
         display: flex;
         flex-direction: column;
         align-items: stretch;
+        background-color: rgb(var(--color-surface));
     }
 
     .list {
