refactor: refactor and document useArrowNavigation

--- a/frontend/src/features/users/UsersList/UsersList.module.css
+++ b/frontend/src/features/users/UsersList/UsersList.module.css
@@ -8,6 +8,10 @@
         background-color: rgb(var(--color-surface));
     }
 
+    .usersList[data-busy] {
+        padding-block-end: var(--padding-4);
+    }
+
     .list {
         width: 100%;
     }
