--- a/frontend/src/components/Dialog/Dialog.module.css
+++ b/frontend/src/components/Dialog/Dialog.module.css
@@ -14,6 +14,7 @@
         display: flex;
         flex-direction: column;
         align-items: stretch;
+        gap: var(--padding-3);
 
         overflow: hidden;
     }
@@ -54,8 +55,8 @@
 
         overflow: auto;
         padding-inline: var(--padding-6);
-        padding-block-start: var(--padding-4);
-        margin-block-end: var(--padding-6);
+        padding-block-start: var(--padding-1);
+        padding-block-end: var(--padding-3);
         color: rgb(var(--color-on-surface-variant));
     }
 }
