fix: fix error styling

--- a/frontend/src/pages/Error/Error.module.css
+++ b/frontend/src/pages/Error/Error.module.css
@@ -1,7 +1,7 @@
 @value extra-large as bp-extra-large, expanded as bp-expanded, medium as bp-medium, compact as bp-compact from "../../assets/styles/variables/breakpoints.module.css";
 
 @layer components {
-    body {
+    .container {
         display: grid;
         place-content: center;
         grid-auto-columns: 100%;
@@ -9,7 +9,7 @@
         height: unset;
     }
 
-    .notFound {
+    .error {
         width: 100%;
         padding-block-start: var(--padding-6);
 
@@ -28,6 +28,10 @@
         row-gap: var(--padding-4);
 
         overflow: auto;
+    }
+
+    .notFound {
+        composes: error;
     }
 
     .heading {
@@ -162,7 +166,7 @@
     }
 
     @media bp-medium {
-        .notFound {
+        .error {
             --content-width: var(--size-text-large);
             padding-block-start: var(--padding-8);
         }
@@ -175,19 +179,20 @@
     }
 
     @media bp-extra-large {
-        body {
+        .container {
             grid-auto-columns: var(--size-60);
             grid-auto-rows: 100%;
 
             background-color: rgb(var(--color-primary-container));
         }
 
-        .notFound {
-            grid-auto-rows: auto;
-            place-content: center;
-
+        .error {
             background-color: rgb(var(--color-surface));
-            min-height: 100%;
+            height: 100%;
+        }
+
+        .notFound {
+            place-content: center;
         }
     }
 }
