--- a/frontend/src/assets/styles/variables/reference-variables.module.css
+++ b/frontend/src/assets/styles/variables/reference-variables.module.css
@@ -5,6 +5,7 @@
         url('../../fonts/Lato/TTF/Lato-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -14,6 +15,7 @@
         url('../../fonts/Lato/TTF/Lato-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -23,6 +25,7 @@
         url('../../fonts/Lato/TTF/Lato-Italic.ttf') format('truetype');
     font-weight: 400;
     font-style: italic;
+    font-display: swap;
 }
 
 :root {
