--- a/frontend/src/features/posts/Posts/Post.module.css
+++ b/frontend/src/features/posts/Posts/Post.module.css
@@ -38,9 +38,10 @@
 
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
         gap: var(--size-4);
+        flex-wrap: wrap;
 
         padding-inline-start: var(--padding-4);
         padding-inline-end: var(--padding-1);
