--- a/frontend/src/features/users/UserHeader/UserHeader.module.css
+++ b/frontend/src/features/users/UserHeader/UserHeader.module.css
@@ -4,6 +4,9 @@
     .heading {
         composes: headline-small from '../../../assets/styles/patterns/typography.module.css';
         color: rgb(var(--color-on-surface));
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 
     .subHeading {
